# Intelligent-Investment-System

./: CLAUDE.md  README.md  agent.py  prompt.py  pyproject.toml  test_notebooks.ipynb
conversation_formatter/: formatter.py
data/: user_profile.json
models/: schemas.py
tools/: fundamental_analisys.py  fundamental_analysis.py  profile.py
