[project]
name = "investment-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.1.3",
    "langchain[google-genai]>=1.2.3",
    "yfinance>=1.0",
]
